# focus_converters

./: CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md
focus_converter_base/: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
focus_converter_base/docs/: README.md  versioning.md  writing_configs.md
focus_converter_base/docs/installation/: with_pip.md  with_poetry.md
focus_converter_base/docs/notebooks/: validating_generated_output.ipynb  writing_configs.ipynb
focus_converter_base/docs/operations/: assign_timezone.md  datetime_parsing.md  lookup.md  map.md  rename.md  sql_condition.md  sql_query.md  static_value.md  unnest.md  utc_assignment.md
focus_converter_base/focus_converter/: conversion_strategy.py  converter.py  main.py
focus_converter_base/focus_converter/common/: cli_options.py
focus_converter_base/focus_converter/configs/: base_config.py  network_simulator.py  string_transform_args.py
focus_converter_base/focus_converter/conversion_configs/aws/: 0_dimension_dtypes_S001.yaml  1_charge_category_S001.yaml  1_charge_type_S001.yaml  1_missing_dimension_line_item_net_unblended_cost_S001.yaml  1_missing_dimension_reservation_reservation_a_r_n_S001.yaml  1_reservation_reservation_arn_S001.yaml  1_resource_type_S001.yaml  1_resource_type_S002.yaml  1_resource_type_S003.yaml  1_savings_plan_savings_plan_arn_S001.yaml  2_resource_name_S001.yaml  3_region_S001.yaml  D001_S001.yaml  D005_S001.yaml  D006_S001.yaml  D012_S002.yaml  D013_S001.yaml  D017_S001.yaml  D018_S001.yaml  availability_zone_S001.yaml  billed_cost_S001.yaml  billing_account_id_S001.yaml  billing_currency_S001.yaml  billing_period_end_S001.yaml  billing_period_start_S001.yaml  charge_description_S001.yaml  charge_frequency_S001.yaml  charge_sub_category_S001.yaml  commitment_discount_category_S001.yaml  (+24 more)
focus_converter_base/focus_converter/conversion_configs/aws-cur/: 0_dimension_dtypes_S001.yaml  1_charge_category_S001.yaml  1_missing_dimension_line_item_net_unblended_cost_S001.yaml  1_missing_dimension_reservation_reservation_a_r_n_S001.yaml  1_resource_type_S001.yaml  1_resource_type_S002.yaml  1_resource_type_S003.yaml  1_savings_plan_savings_plan_arn_S001.yaml  2_resource_name_S001.yaml  availability_zone_S001.yaml  billing_currency_S001.yaml  billing_period_end_S001.yaml  charge_period_end_S001.yaml  charge_period_start_S001.yaml  charge_sub_category_S001.yaml  commitment_discount_category_S001.yaml  commitment_discount_type_S001.yaml  consumed_quantity_S001.yaml  consumed_unit_S001.yaml  invoice_issuer_S001.yaml  list_cost_S001.yaml  list_unit_price_S001.yaml  pricing_category_S001.yaml  pricing_quantity_S001.yaml  pricing_unit_S001.yaml  publisher_S001.yaml  region_S001.yaml  resource_id_S001.yaml  service_category_S001.yaml  sku_id_S001.yaml  sku_price_id_S001.yaml  sub_account_id_S001.yaml
focus_converter_base/focus_converter/conversion_functions/: __init__.py  column_functions.py  datetime_functions.py  deferred_column_functions.py  lookup_function.py  sql_functions.py  string_functions.py  validations.py
focus_converter_base/focus_converter/data_loaders/: data_exporter.py  data_loader.py  provider_sensor.py
focus_converter_base/focus_converter/models/: __init__.py  base_plugin.py  focus_column_names.py
focus_converter_base/focus_converter/utils/: export_conversion_rules.py  export_converted_sample_data.py  generate_per_provider_progress.py  profiler.py
focus_converter_base/notebooks/: visualize_plans.ipynb
focus_converter_base/tests/: test_base_conversion_plugin.py  test_data_auto_load.py  test_polars_pyarrow_compatibility.py
focus_converter_base/tests/converter_functions/: test_column_dtypes.py  test_connected_nodes.py  test_datetime_import_from_csv.py  test_default_value_if_not_present.py  test_focus_column_dtype.py  test_lookup_function.py  test_mapping_function.py  test_month_end_function.py  test_month_start_end_function.py  test_null_values_to_null_literal_function.py  test_static_value.py  test_string_functions.py  test_unnest_operation.py
focus_converter_base/tests/data_generators/: base_class.py  main.py
focus_converter_base/tests/plan_validators/: fixtures.py  test_disconnected_nodes.py  test_plan_graph_generators.py
(+184 files in other folders)
